--- a/assessment.html
+++ b/assessment.html
@@ -2,9 +2,124 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HTML Assessment</title>
   </head>
   <body>
+    <h1>Title</h1>
+    <p><strong>Lorem</strong> ipsum dolor sit amet, id ius vero referrentur. Mea in probo habeo interpretaris, diam pertinax ad nec, ut eam justo omnium. Et eos tollit deseruisse. An laudem facilisi pericula vis, ut equidem feugait qui.
+      Ex qui novum dicit virtute. Id eam prompta fuisset inciderint.</p>
+      <p style="margin-left: 40px"><strong>Integer</strong> <em>deserunt nominati necessitatibus vis, mei te rebum timeam. Ex brute argumentum ullamcorper sed, at unum reformidans eam. Per dicunt percipitur id. Eu alii delectus definiebas mei, quot vidisse ex ius, at inani virtute nec.</em></p>
+      <p><strong>Vestibulum</strong> amet volumus pri. Decore molestiae usu ne. Libris invenire ne qui, usu ei nibh laudem iisque, ne sed sanctus utroque tractatos. Adhuc iusto efficiantur qui ad. Pro te tota prima, eum mollis euismod ornatus at, te vidit legere graeci pro. Mel ne diam graeco perpetua, sea prompta nusquam molestie no, sed in ferri feugiat. Quis audiam mea ex, pri cu vero virtute atomorum, ei amet tamquam perpetua his.</p>
+      <h1>Table</h1>
+      <table>
+        <tr>
+          <th colspan="10">Scores by quarter</th>
+        </tr>
+        <tr>
+          <th colspan="10">First Half Second Half</th>
+        </tr>
+
+
+        <tr>
+          <th rowspan=2>Team Name</th>
+        </tr>
+        <tr>
+          <th colspan="4"> Q1</th>
+          <th colspan="4"> Q2</th>
+          <th colspan="4"> Q3</th>
+          <th colspan="4"> Q4</th>
+          <th colspan="1">Final</th>
+        </tr>
+
+        <tr>
+          <td>Denver</td>
+          <td colspan="4">7</td>
+          <td colspan="4">3</td>
+          <td colspan="4">0</td>
+          <td colspan="4">7</td>
+          <td colspan="4">17</td>
+        </tr>
+
+        <tr>
+          <td>Chicago</td>
+          <td colspan="4">0</td>
+          <td colspan="4">6</td>
+          <td colspan="4">3</td>
+          <td colspan="4">6</td>
+          <td colspan="4">15</td>
+        </tr>
+
+        <tr>
+          <th>Total</th>
+          <td colspan="4"><strong>7</strong></td>
+          <td colspan="4"><strong>9</strong></td>
+          <td colspan="4"><strong>3</strong></td>
+          <td colspan="4"><strong>13</strong></td>
+          <td colspan="4"><strong>32</strong</td>
+
+    </table>
+    <h1>List</h1>
+
+
+<ul>
+    <li><img src="file:///Users/m0jangles/Downloads/Broncos.png" width="70" height="60"  alt="Broncos Logo"></li>
+  </ul>
+<ul>
+    <ul>
+
+      <p style="margin-left: 10px"><a href="http://www.denverbroncos.com">Denver Broncos</a></p>
+
+      <li>Coach: Gary Kubiak</li>
+      <li>QB</li>
+        <ol>
+          <li>Brock Osweiler</li>
+          <li>Trevor Siemian</li>
+          <li>Peyton Manning (injured)</li>
+        </ol>
+      </ul>
+    </ul>
+
+        <ul>
+            <li><img src="file:///Users/m0jangles/Downloads/CB.png" width="50" height="40"  alt="Chicago Bears"></li>
+          </ul>
+    <ul>
+      <ul>
+        <p style="margin-left: 10px"><a href="http://www.chicagobears.com">Chicago Bears</a></p>
+
+        <li>Coach: Gary Kubiak</li>
+        <li>QB</li>
+          <ol>
+            <li>Jay Cutler</li>
+            <li>David Foles</li>
+          </ol>
+        </ul>
+<h1>Form</h1>
+
+<form>
+    First name: <input type="text" name="firstname">
+    Last name: <input type="text" name="lastname">
+      <p>Favorite Sport:</p>
+    <p><select>
+        <option value="Soccer">Soccer</option>
+        <option value="Football">Football</option>
+        <option value="Fuzeball">Fuzeball</option>
+    </select></p>
+    <p>I have:</p>
+    <input type="checkbox" name="sports" value="attended"> Attended
+    <input type="checkbox" name="sports" value="played"> Played
+    <input type="checkbox" name="sports" value="coached"> Coached
+    <input type="checkbox" name="sports" value="bet on"> Bet On
+  <p>For this sport I prefer the:</p>
+    <input type="radio" name="preferences" value="amateur"> Amateur
+    <input type="radio" name="preferences" value="college"> College
+    <input type="radio" name="preferences" value="professional"> Professional
+</form>
+<form action="/html/tags/html_form_tag_action.cfm">
+    <p><input type="submit">
+    </p>
+  </form>
+
+
 
   </body>
 </html>
