fixed strong tag

--- a/assessment.html
+++ b/assessment.html
@@ -21,7 +21,7 @@
 
 
         <tr>
-          <th rowspan=2>Team Name</th>
+          <th rowspan="2">Team Name</th>
         </tr>
         <tr>
           <th colspan="4"> Q1</th>
@@ -32,7 +32,7 @@
         </tr>
 
         <tr>
-          <td>Denver</td>
+          <td colspan="4">Denver</td>
           <td colspan="4">7</td>
           <td colspan="4">3</td>
           <td colspan="4">0</td>
@@ -41,7 +41,7 @@
         </tr>
 
         <tr>
-          <td>Chicago</td>
+          <td colspan="4">Chicago</td>
           <td colspan="4">0</td>
           <td colspan="4">6</td>
           <td colspan="4">3</td>
@@ -55,7 +55,7 @@
           <td colspan="4"><strong>9</strong></td>
           <td colspan="4"><strong>3</strong></td>
           <td colspan="4"><strong>13</strong></td>
-          <td colspan="4"><strong>32</strong</td>
+          <td colspan="4"><strong>32</strong></td>
 
     </table>
     <h1>List</h1>
