--- a/assessment.html
+++ b/assessment.html
@@ -50,7 +50,7 @@
         </tr>
 
         <tr>
-          <th>Total</th>
+          <th colspan="4">Total</th>
           <td colspan="4"><strong>7</strong></td>
           <td colspan="4"><strong>9</strong></td>
           <td colspan="4"><strong>3</strong></td>
