--- a/assessment.html
+++ b/assessment.html
@@ -115,7 +115,7 @@
     <input type="radio" name="preferences" value="professional"> Professional
 </form>
 <form action="/html/tags/html_form_tag_action.cfm">
-    <p><input type="submit">
+    <p><input type="submit" value="Submit Query">
     </p>
   </form>
 
