--- a/assessment.html
+++ b/assessment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="assessment.css">
   <head>
     <meta charset="utf-8">
     <title>HTML Assessment</title>
@@ -18,8 +19,6 @@
         <tr>
           <th colspan="20">First Half Second Half</th>
         </tr>
-
-
         <tr>
           <th rowspan="2">Team Name</th>
         </tr>
@@ -59,15 +58,13 @@
 
     </table>
     <h1>List</h1>
-
-
 <ul>
-    <li><img src="file:///Users/m0jangles/Downloads/Broncos.png" width="70" height="60"  alt="Broncos Logo"></li>
+    <li><img src="http://a2.espncdn.com/combiner/i?img=%2Fi%2Fteamlogos%2Fnfl%2F500%2Fden.png" width="70" height="60"  alt="Broncos Logo">  <p style="margin-left: 10px"><a href="http://www.denverbroncos.com">Denver Broncos</a></p></li>
   </ul>
 <ul>
     <ul>
 
-      <p style="margin-left: 10px"><a href="http://www.denverbroncos.com">Denver Broncos</a></p>
+
 
       <li>Coach: Gary Kubiak</li>
       <li>QB</li>
@@ -80,11 +77,11 @@
     </ul>
 
         <ul>
-            <li><img src="file:///Users/m0jangles/Downloads/CB.png" width="50" height="40"  alt="Chicago Bears"></li>
+            <li><img src="https://cdn.bleacherreport.net/images/team_logos/328x328/chicago_bears.png" width="50" height="40"  alt="Chicago Bears"><p style="margin-left: 10px"><a href="http://www.chicagobears.com">Chicago Bears</a></p></li>
           </ul>
     <ul>
       <ul>
-        <p style="margin-left: 10px"><a href="http://www.chicagobears.com">Chicago Bears</a></p>
+
 
         <li>Coach: Gary Kubiak</li>
         <li>QB</li>
@@ -100,9 +97,9 @@
     Last name: <input type="text" name="lastname">
       <p>Favorite Sport:</p>
     <p><select>
-        <option value="Soccer">Soccer</option>
-        <option value="Football">Football</option>
-        <option value="Fuzeball">Fuzeball</option>
+        <option value="soccer">Soccer</option>
+        <option value="football">Football</option>
+        <option value="fuzeball">Fuzeball</option>
     </select></p>
     <p>I have:</p>
     <input type="checkbox" name="sports" value="attended"> Attended
